--- a/assets/style.css
+++ b/assets/style.css
@@ -54,13 +54,19 @@ h1, h2, h3, h4, h5, h6 {
 /* Custom properties */
 
 :root {
-    /* Background colors */
     --primary-bg-color: #F4D04E;
     --secondary-bg-color: #FFFFFF;
 
-    /* Font colors */
     --primary-font-color: #111111;
     --secondary-font-color: #6B6B6B;
 
-    /* Font weight*/
+    --heading-font-weight: 300;
+    --subheading-font-weight: 150;
+    --paragraph-font-weight: 100;
+    --notes-font-weight: 50;
+
+    --heading-line-height: 
+    --subheading-line-height:
+    --paragraph-line-height:
+    --notes-line-height: 
 }
