--- a/assets/style.css
+++ b/assets/style.css
@@ -98,9 +98,25 @@ main {
   align-items: center;
   text-align: center;
   max-width: 21rem;
-  border-radius: 1.25rem;
+  border-radius: 1rem;
 }
 
-.photo {
-  margin: auto;
+.hero-photo {
+  margin: 1.5rem;
+  border-radius: 0.7rem;
+  overflow: hidden;
+}
+
+.container {
+  margin: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
+  text-align: start;
+}
+
+.avatar {
+  display: flex;
+  align-items: center;
 }
